fix poster alignment for varying book sizes, add tooltip on hover

--- a/src/app/components/now/feed-posters/feed-posters.component.scss
+++ b/src/app/components/now/feed-posters/feed-posters.component.scss
@@ -13,16 +13,23 @@
 .feed-item-posters-wrapper {
   display: flex;
   flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-around;
 }
 
 .feed-item-poster {
-  display: inline-block;
-  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  text-align: center;
-  padding-bottom: 10px;
-  padding-left: 8px;
-  padding-right: 8px;
+  justify-content: center;
+}
+
+.feed-item-poster a {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .feed-item-poster-img {
@@ -42,6 +49,7 @@
   height: 150px;
   margin: auto;
   overflow: hidden;
+  text-align: center;
 }
 
 .no-poster-thumbnail {
@@ -51,6 +59,7 @@
 
 .feed-item-rating {
   text-decoration: none;
+  align-self: flex-end;
 }
 
 .feed-item-rating:hover {
